--- a/common/concurrency/limits/src/test/resources/application.yaml
+++ b/common/concurrency/limits/src/test/resources/application.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2024 Oracle and/or its affiliates.
+# Copyright (c) 2024, 2025 Oracle and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+# RJE -- HERE
 
 first:
   concurrency-limit:
@@ -30,3 +32,9 @@ second:
       max-limit: 22
       initial-limit: 14
       backoff-ratio: 0.74
+third:
+  concurrency-limit:
+    throughput:
+      rate-limiting-algorithm: "token-bucket"
+      amount: 500
+      duration: "PT5S"
